kubernetes/main/apps/oauth2-proxy/app/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-external
  namespace: oauth2-proxy
  annotations:
    external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
    cert-manager.io/cluster-issuer: zerossl-prod
    cert-manager.io/private-key-rotation-policy: always
    cert-manager.io/private-key-algorithm: Ed25519
spec:
  ingressClassName: external
  tls:
    - hosts:
        - "*.${PUBLIC_DOMAIN}"
      secretName: oauth2-proxy-tls
  rules:
    - host: vaultwarden.${PUBLIC_DOMAIN}
      http:
        paths:
          - path: /oauth2
            pathType: ImplementationSpecific
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
